--- a/processor/android/gvi/lib/build.gradle
+++ b/processor/android/gvi/lib/build.gradle
@@ -4,13 +4,19 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.0.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3' //for bintray_push.gradle
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.5'//for bintray_push.gradle
     }
 }
 apply plugin: 'com.android.library'
+apply from: "${projectDir}/bintray-push.gradle"
 
 repositories {
     jcenter { url "http://jcenter.bintray.com/"}
 }
+
+group = POM_GROUP_ID
+version = POM_VERSION
 
 android {
     compileSdkVersion 23
