Modify: jar to aar

--- a/processor/android/gvi/lib/gradle.properties
+++ b/processor/android/gvi/lib/gradle.properties
@@ -11,7 +11,7 @@ POM_GROUP_ID=com.github.snowdream.gvi
 POM_ARTIFACT_ID=lib
 POM_VERSION=0.1
 POM_NAME=GVI
-POM_PACKAGING=jar
+POM_PACKAGING=aar
 POM_DESCRIPTION=GVI
 POM_URL=https://github.com/snowdream/GVI
 POM_INCEPTION_YEAR=2016
