--- a/processor/android/gvi/gradle.properties
+++ b/processor/android/gvi/gradle.properties
@@ -16,3 +16,11 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+PACKAGE_NAME=com.github.snowdream
+VERSION_NAME=1.0
+VERSION_CODE=1
+MIN_SDK_VERSION=14
+TARGET_SDK_VERSION=24
+COMPILE_SDK_VERSION=24
+BUILD_TOOLS_VERSION=24.0.3
