--- a/processor/android/gvi/gradle/plugins/bintray-push.gradle
+++ b/processor/android/gvi/gradle/plugins/bintray-push.gradle
@@ -1,23 +1,26 @@
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
+apply from: "${rootDir}/gradle/plugins/util.gradle"
+
+group = optProperty("POM_GROUP_ID")
+archivesBaseName = optProperty("POM_NAME")
+version =  optProperty("POM_VERSION")
 
 configurations {
-     archives {
+    archives {
         extendsFrom configurations.default
     }
 }
 
 install {
-        repositories.mavenInstaller {
-            configurePOM(pom)
-        }
+    repositories.mavenInstaller {
+        configurePOM(pom)
+    }
 }
 
 bintray {
-    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
-    ossUser = project.hasProperty('ossUser') ? project.property('ossUser') : System.getenv('OSS_USER')
-    ossPassword = project.hasProperty('ossPassword') ? project.property('ossPassword') : System.getenv('OSS_PASSWORD')
+    user = optProperty("BINTRAY_USER")
+    key = optProperty("BINTRAY_API_KEY")
     configurations = ['archives']
     dryRun = false //Whether to run this as dry-run, without deploying
     publish = true //If version should be auto published after an upload
@@ -25,37 +28,36 @@ bintray {
 
     pkg {
         repo = "maven"
-        name = POM_GROUP_ID +":"+ POM_ARTIFACT_ID
-        userOrg = user
-        websiteUrl = POM_URL
-        issueTrackerUrl = POM_ISSUE_MANAGEMENT_URL
-        vcsUrl = POM_SCM_URL
+        name = optProperty("POM_GROUP_ID") +":"+ optProperty("POM_ARTIFACT_ID")
+        userOrg = optProperty("BINTRAY_USER")
+        websiteUrl = optProperty("POM_URL")
+        issueTrackerUrl = optProperty("POM_ISSUE_MANAGEMENT_URL")
+        vcsUrl = optProperty("POM_SCM_URL")
         licenses = ['Apache-2.0']
-        labels = ['snowdream', 'framework', 'android','gradle']
+        labels = []
         version {
-            name = POM_VERSION
-            desc = POM_DESCRIPTION
-            vcsTag = POM_VERSION
+            name = optProperty("POM_VERSION")
+            desc = optProperty("POM_DESCRIPTION")
+            vcsTag = optProperty("POM_VERSION")
             publicDownloadNumbers = true
             //attributes = ['gradle-plugin': 'com.use.less:com.use.less.gradle:gradle-useless-plugin']
             //Optional configuration for GPG signing
             gpg {
                 sign = true //Determines whether to GPG sign the files. The default is false
-                passphrase = ossPassword //Optional. The passphrase for GPG signing'
+                passphrase = optProperty("signing.password") //Optional. The passphrase for GPG signing'
             }
             //Optional configuration for Maven Central sync of the version
             mavenCentralSync {
                 sync = true //Optional (true by default). Determines whether to sync the version to Maven Central.
-                user = ossUser //OSS user token
-                password = ossPassword //OSS user password
+                user = optProperty("MAVEN_DEPLOY_USERNAME") //OSS user token
+                password = optProperty("MAVEN_DEPLOY_PASSWORD") //OSS user password
                 close = '1' //Optional property. By default the staging repository is closed and artifacts are released to Maven Central. You can optionally turn this behaviour off (by puting 0 as value) and release the version manually.
             }
         }
     }
 }
 
-
-task androidReleaseJar(type: Jar, dependsOn: assembleRelease) {
+task androidReleaseJar(type: Jar,dependsOn: "assembleRelease") {
     from "$buildDir/intermediates/classes/release/"
     exclude '**/BuildConfig.class'
     exclude '**/R.class'
@@ -72,7 +74,6 @@ task androidSourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
 }
 
-
 artifacts {
     archives androidReleaseJar
     archives androidSourcesJar
@@ -81,42 +82,42 @@ artifacts {
 
 private configurePOM(def pom) {
     pom.project {
-        groupId POM_GROUP_ID
-        artifactId POM_ARTIFACT_ID
-        version POM_VERSION
-        name POM_NAME
-        packaging POM_PACKAGING
-        description POM_DESCRIPTION
-        url POM_URL
-        inceptionYear POM_INCEPTION_YEAR
+        groupId optProperty("POM_GROUP_ID")
+        artifactId optProperty("POM_ARTIFACT_ID")
+        version optProperty("POM_VERSION")
+        name optProperty("POM_NAME")
+        packaging optProperty("POM_PACKAGING")
+        description optProperty("POM_DESCRIPTION")
+        url optProperty("POM_URL")
+        inceptionYear optProperty("POM_INCEPTION_YEAR")
 
         scm {
-            url POM_SCM_URL
-            connection POM_SCM_CONNECTION
-            developerConnection POM_SCM_DEV_CONNECTION
+            url optProperty("POM_SCM_URL")
+            connection optProperty("POM_SCM_CONNECTION")
+            developerConnection optProperty("POM_SCM_DEV_CONNECTION")
         }
 
         licenses {
             license {
-                name POM_LICENCE_NAME
-                url POM_LICENCE_URL
-                distribution POM_LICENCE_DIST
-                comments POM_LICENCE_COMMENTS
+                name optProperty("POM_LICENCE_NAME")
+                url optProperty("POM_LICENCE_URL")
+                distribution optProperty("POM_LICENCE_DIST")
+                comments optProperty("POM_LICENCE_COMMENTS")
             }
         }
 
         developers {
             developer {
-                id POM_DEVELOPER_ID
-                name POM_DEVELOPER_NAME
-                email POM_DEVELOPER_EMAIL
-                url POM_DEVELOPER_URL
+                id optProperty("POM_DEVELOPER_ID")
+                name optProperty("POM_DEVELOPER_NAME")
+                email optProperty("POM_DEVELOPER_EMAIL")
+                url optProperty("POM_DEVELOPER_URL")
             }
         }
 
         issueManagement {
-            system POM_ISSUE_MANAGEMENT_SYSTEM
-            url POM_ISSUE_MANAGEMENT_URL
+            system optProperty("POM_ISSUE_MANAGEMENT_SYSTEM")
+            url optProperty("POM_ISSUE_MANAGEMENT_URL")
         }
     }
 }
