--- a/processor/android/gvi/gradle/wrapper/gradle-wrapper.properties
+++ b/processor/android/gvi/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Apr 10 15:27:10 PDT 2013
+#Wed Nov 02 20:06:03 CST 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.2.1-all.zip
+distributionUrl=http\://android-mirror.bugly.qq.com\:8080/gradle/gradle-3.1-bin.zip
