--- a/processor/android/gvi/lib/build.gradle
+++ b/processor/android/gvi/lib/build.gradle
@@ -1,52 +1,10 @@
-buildscript {
-    repositories {
-        jcenter { url "http://jcenter.bintray.com/"}
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3' //for bintray_push.gradle
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.5'//for bintray_push.gradle
-    }
-}
-apply plugin: 'com.android.library'
-apply from: "${projectDir}/bintray-push.gradle"
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply from: "${rootDir}/gradle/plugins/android-library.gradle"
+apply from: "${rootDir}/gradle/plugins/bintray-push.gradle"
 
-repositories {
-    jcenter { url "http://jcenter.bintray.com/"}
-}
 
-group = POM_GROUP_ID
-version = POM_VERSION
-
-android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
-
-    defaultConfig {
-        minSdkVersion 9
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
-
-        testApplicationId 'com.github.snowdream.gvi.lib.test'
-        testInstrumentationRunner "android.test.InstrumentationTestRunner"
-        testHandleProfiling true
-        testFunctionalTest true
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_6
-        targetCompatibility JavaVersion.VERSION_1_6
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.2.0'
 }
