Fix: POM_NAME should be the same as POM_ARTIFACT_ID

--- a/processor/android/gvi/lib/gradle.properties
+++ b/processor/android/gvi/lib/gradle.properties
@@ -1,14 +1,14 @@
 # Set Gradle settings which apply to all modules here.
 PACKAGE_NAME=com.github.snowdream.gvi
-VERSION_NAME=0.3
-VERSION_CODE=3
+VERSION_NAME=0.5
+VERSION_CODE=5
 
 POM_GROUP_ID=com.github.snowdream.gvi
 POM_ARTIFACT_ID=lib
-POM_VERSION=0.3
-POM_NAME=GVI
+POM_VERSION=0.5
+POM_NAME=lib
 POM_PACKAGING=aar
-POM_DESCRIPTION=GVI
+POM_DESCRIPTION=GVI lib
 POM_URL=https://github.com/snowdream/GVI
 POM_INCEPTION_YEAR=2016
 
