--- a/processor/android/gvi/gradle/plugins/android.gradle
+++ b/processor/android/gvi/gradle/plugins/android.gradle
@@ -1,14 +1,23 @@
 apply plugin: 'com.android.application'
 apply from: "${rootDir}/gradle/plugins/util.gradle"
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 dependencies {
     compile  fileTree(dir: 'libs', include: '*.jar')
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:support-annotations:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:design:25.1.1'
+    compile 'com.android.support:support-annotations:25.1.1'
     compile 'com.android.support:multidex:1.0.1'
-    
+    compile 'com.github.snowdream:annotation:0.7@aar'
+
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
     testCompile 'junit:junit:4.12'
+
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 }
 
 android {
@@ -26,6 +35,12 @@ android {
         testInstrumentationRunner "android.test.InstrumentationTestRunner"
         testHandleProfiling true
         testFunctionalTest true
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath=true
+            }
+        }
     }
     
     compileOptions {
@@ -35,7 +50,7 @@ android {
     
     signingConfigs {
         release {
-          if (hasProperty("KEYSTORE")) {
+          if (containsProperty("KEYSTORE")) {
             storeFile file(optProperty("KEYSTORE"))
             storePassword optProperty("KEYSTORE_PASSWORD")
             keyAlias optProperty("KEY_ALIAS")
@@ -48,9 +63,13 @@ android {
         release {
             minifyEnabled true
             shrinkResources true
-            proguardFile getDefaultProguardFile('proguard-android.txt')
+            proguardFiles "${rootDir}/gradle/proguard/proguard-android-app-optimize.txt", 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
+    }
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+        test.java.srcDirs += 'src/test/kotlin'
     }
 
     packagingOptions {
