--- a/processor/android/gvi/gradle/plugins/android-library.gradle
+++ b/processor/android/gvi/gradle/plugins/android-library.gradle
@@ -1,14 +1,29 @@
 apply plugin: 'com.android.library'
 apply from: "${rootDir}/gradle/plugins/util.gradle"
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'org.jetbrains.dokka-android'
 
 dependencies {
     compile  fileTree(dir: 'libs', include: '*.jar')
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:support-annotations:24.2.1'
-    compile 'com.android.support:multidex:1.0.1'
-    
+
+    if(optProperty("POM_PACKAGING") == 'aar'){
+        compile 'com.android.support:appcompat-v7:25.1.1'
+        compile 'com.android.support:design:25.1.1'
+        compile 'com.android.support:support-annotations:25.1.1'
+        compile 'com.android.support:multidex:1.0.1'
+
+        compile 'com.github.snowdream:annotation:0.7@aar'
+
+        androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+            exclude group: 'com.android.support', module: 'support-annotations'
+        })
+    }
+
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
     testCompile 'junit:junit:4.12'
+
 }
 
 android {
@@ -34,7 +49,7 @@ android {
 
     signingConfigs {
         release {
-          if (hasProperty("KEYSTORE")) {
+          if (containsProperty("KEYSTORE")) {
             storeFile file(optProperty("KEYSTORE"))
             storePassword optProperty("KEYSTORE_PASSWORD")
             keyAlias optProperty("KEY_ALIAS")
@@ -45,11 +60,17 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
-            shrinkResources true
-            proguardFile getDefaultProguardFile('proguard-android.txt')
+            minifyEnabled false
+            //shrinkResources true
+            //proguardFile getDefaultProguardFile('proguard-android.txt')
+            consumerProguardFiles 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
+    }
+
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+        test.java.srcDirs += 'src/test/kotlin'
     }
 
     packagingOptions {
@@ -84,4 +105,19 @@ android.libraryVariants.all { variant ->
         exclude '**/BuildConfig.java'
         exclude '**/R.java'
     }
+}
+
+dokka {
+    moduleName = 'util'
+    outputFormat = 'javadoc'
+    outputDirectory = "$buildDir/javadoc"
+    processConfigurations = ['compile', 'extra']
+    includes = ['packages.md', 'extra.md']
+    samples = ['samples/basic.kt', 'samples/advanced.kt']
+    linkMapping {
+        dir = "src/main/kotlin"
+        url = "https://github.com/snowdream/"
+        suffix = "#L"
+    }
+    sourceDirs = files('src/main/kotlin')
 }
